<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/DialogCardStyle"
    app:cardCornerRadius="16dip">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            style="@style/LinearLayoutDialogScheduleStyle"
            android:layout_weight="2">

            <TextView
                style="@style/TextViewScheduleItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/number" />

            <EditText
                style="@style/TextViewScheduleItem"
                android:hint="@string/_1" />
        </LinearLayout>

        <LinearLayout
            style="@style/LinearLayoutDialogScheduleStyle"
            android:layout_weight="14">


            <TextView
                style="@style/TextViewScheduleItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/subject_name" />

            <EditText
                style="@style/EditTextStyle"
                android:hint="@string/name" />

        </LinearLayout>

        <LinearLayout
            style="@style/LinearLayoutDialogScheduleStyle"
            android:layout_weight="3">

            <TextView
                style="@style/TextViewScheduleItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/class_room" />

            <EditText
                style="@style/EditTextStyle"
                android:hint="@string/_204" />
        </LinearLayout>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:gravity="end">


            <Button
                style="@style/CancelButton"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_margin="4dp"/>

            <Button
                style="@style/ConfirmButton"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:layout_margin="4dp"/>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
